@@ -23,9 +23,12 @@
 #include <lsp-plug.in/common/endian.h>
 #include <lsp-plug.in/common/types.h>
 #include <lsp-plug.in/fmt/lspc/util.h>
+#include <lsp-plug.in/fmt/lspc/AudioWriter.h>
 #include <lsp-plug.in/fmt/lspc/ChunkWriterStream.h>
+#include <lsp-plug.in/fmt/lspc/IAudioFormatSelector.h>
 #include <lsp-plug.in/io/InFileStream.h>
 #include <lsp-plug.in/io/InMemoryStream.h>
+#include <lsp-plug.in/mm/InAudioFileStream.h>
 #include <lsp-plug.in/stdlib/stdlib.h>
 #include <lsp-plug.in/stdlib/string.h>
 
@@ -33,6 +36,8 @@ namespace lsp
 {
     namespace lspc
     {
+        static IAudioFormatSelector default_selector;
+
         path_entry_t *alloc_path_entry(const char *path, size_t flags, chunk_id_t reference_id)
         {
             if (path == NULL)
@@ -323,6 +328,127 @@ namespace lsp
             return STATUS_OK;
         }
 
+        status_t write_audio_entry(chunk_id_t *chunk_id, File *file, const char *path, IAudioFormatSelector *selector, size_t buf_size)
+        {
+            mm::InAudioFileStream is;
+            status_t res = is.open(path);
+            if (res != STATUS_OK)
+                return res;
+            res = write_audio_entry(chunk_id, file, &is, selector, buf_size);
+            status_t res2 = is.close();
+            return (res != STATUS_OK) ? res2 : res;
+        }
+
+        status_t write_audio_entry(chunk_id_t *chunk_id, File *file, const io::Path *path, IAudioFormatSelector *selector, size_t buf_size)
+        {
+            mm::InAudioFileStream is;
+            status_t res = is.open(path);
+            if (res != STATUS_OK)
+                return res;
+            res = write_audio_entry(chunk_id, file, &is, selector, buf_size);
+            status_t res2 = is.close();
+            return (res != STATUS_OK) ? res2 : res;
+        }
+
+        status_t write_audio_entry(chunk_id_t *chunk_id, File *file, const LSPString *path, IAudioFormatSelector *selector, size_t buf_size)
+        {
+            mm::InAudioFileStream is;
+            status_t res = is.open(path);
+            if (res != STATUS_OK)
+                return res;
+            res = write_audio_entry(chunk_id, file, &is, selector, buf_size);
+            status_t res2 = is.close();
+            return (res != STATUS_OK) ? res2 : res;
+        }
+
+        status_t write_audio_entry(chunk_id_t *chunk_id, File *file, mm::IInAudioStream *is, IAudioFormatSelector *selector, size_t buf_size)
+        {
+            status_t res;
+            if (is == NULL)
+                return STATUS_BAD_ARGUMENTS;
+
+            // Select audio format
+            audio_format_t ofmt;
+            mm::audio_stream_t ifmt;
+            if ((res = is->info(&ifmt)) != STATUS_OK)
+                return res;
+            if (selector == NULL)
+                selector            = &default_selector;
+            if ((res = selector->decide(&ofmt, &ifmt)) != STATUS_OK)
+                return res;
+
+            // Create audio writer
+            audio_parameters_t params;
+            AudioWriter wr;
+            params.channels     = ifmt.channels;
+            params.frames       = ifmt.frames;
+            params.sample_rate  = ofmt.sample_rate;
+            params.codec        = ofmt.codec;
+            params.sample_format= ofmt.sample_format;
+            if ((res = wr.open(file, &params, false)) != STATUS_OK)
+                return res;
+            lsp_finally { wr.close(); };
+            chunk_id_t res_chunk_id = wr.unique_id();
+
+            // Allocate buffer for I/O
+            size_t min_buf_size = ifmt.channels * sizeof(float);
+            buf_size            = lsp_max(min_buf_size, buf_size - (buf_size) % min_buf_size);
+            float *data         = static_cast<float *>(malloc(buf_size));
+            if (data == NULL)
+                return STATUS_NO_MEM;
+            lsp_finally { free(data); };
+            ssize_t max_frames  = buf_size / (ifmt.channels * sizeof(float));
+
+            // Perform data copy
+            for (wssize_t frame = 0; frame < ifmt.frames; )
+            {
+                size_t to_do        = lsp_min(max_frames, ifmt.frames - frame);
+                ssize_t nread       = is->read(data, to_do);
+                if (nread < 0)
+                    return -nread;
+                if ((res = wr.write_frames(data, nread)) != STATUS_OK)
+                    return res;
+                frame              += nread;
+            }
+
+            // Close the audio chunk writer
+            if ((res = wr.close()) != STATUS_OK)
+                return res;
+
+            // Return success result
+            if (chunk_id != NULL)
+                *chunk_id           = res_chunk_id;
+            return STATUS_OK;
+        }
+
+        status_t write_audio_entry(
+            chunk_id_t *chunk_id, File *file,
+            const float *frames, const audio_parameters_t *params)
+        {
+            status_t res;
+            if ((frames == NULL) || (params == NULL))
+                return STATUS_BAD_ARGUMENTS;
+
+            // Create audio writer
+            AudioWriter wr;
+            if ((res = wr.open(file, params, false)) != STATUS_OK)
+                return res;
+            lsp_finally { wr.close(); };
+            chunk_id_t res_chunk_id = wr.unique_id();
+
+            // Perform data write
+            if ((res = wr.write_frames(frames, params->frames)) != STATUS_OK)
+                return res;
+
+            // Close the audio chunk writer
+            if ((res = wr.close()) != STATUS_OK)
+                return res;
+
+            // Return success result
+            if (chunk_id != NULL)
+                *chunk_id           = res_chunk_id;
+            return STATUS_OK;
+        }
     } /* namespace lspc */
 } /* namespace lsp */
 
